--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
 # Site settings
-title: Clean Blog
+title: Blog | Juan Carlos García 
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
-description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  IronSummitMedia
+email: jugade92@gmail.com
+description: "Juan Carlos García Blog"
+baseurl: ""
+url: "http://jcagarcia.github.io"
+twitter_username: juancaFX
+github_username:  jcagarcia
 
 # Build settings
 markdown: kramdown
