Updating theme config

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Blog | Juan Carlos García 
+title: Juan Carlos García 
 header-img: img/home-bg.jpg
 email: jugade92@gmail.com
 description: "Juan Carlos García Blog"
