--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Juan Carlos García 
 header-img: img/home_bg.jpg
 email: jugade92@gmail.com
-description: "Juan Carlos García Blog - All About Spring Roo Project"
+description: "Juan Carlos García - All about Spring Roo, gvNIX, OSGi and other technologies"
 baseurl: ""
 url: "http://jcagarcia.github.io"
 twitter_username: juancaFX
