--- a/_config.yml
+++ b/_config.yml
@@ -16,5 +16,9 @@ paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
 # Analytics and webmaster tools stuff goes here
-google_analytics: UA-65364013-1
-google_verify:
+analytics :
+  provider : google
+  google : 
+      tracking_id : UA-65364013-1
+  getclicky :
+    site_id :
